--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -19,6 +19,7 @@ body {
   background-color: var(--bg-color);
   color: var(--text-color);
   transition: background-color 0.3s, color 0.3s;
+  margin: 0px;
 }
 .card {
   background-color: var(--card-bg);
