--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -3,3 +3,9 @@
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     gap: 20px;
 }
+
+.home-title{
+    text-align: center;
+    font-size: 36px;
+    margin-bottom: 20px;
+}
