--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,11 +4,12 @@
   --text-color: #333333;
   --card-bg: #f4f4f9;
   --card-border: #e1e1e8;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body.dark-mode {
   /* Dark Mode */
-  --bg-color: #1e1e2c;
+  --bg-color: #17172c;
   --text-color: #f4f4f9;
   --card-bg: #2a2a3d;
   --card-border: #3a3a4d;
@@ -21,10 +22,9 @@ body {
   transition: background-color 0.3s, color 0.3s;
   margin: 0px;
 }
-.card {
-  background-color: var(--card-bg);
-  border: 1px solid var(--card-border);
-  border-radius: 8px;
-  padding: 15px;
-  transition: background-color 0.3s, border-color 0.3s;
+
+* {
+  transition: background-color 0.3s, color 0.1s, border-color 0.3s;
 }
+
+
